--- a/templates/topology.html
+++ b/templates/topology.html
@@ -32,7 +32,7 @@
               <label for="level-select" class="form-label">层级</label>
               <select id="level-select" class="form-select">
                 <option value="port" selected>端口级</option>
-                <option value="device" disabled>设备级（占位）</option>
+                <option value="device">设备级</option>
               </select>
             </div>
             <div class="mt-2">
@@ -69,6 +69,7 @@
   <script src="/static/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
   <script src="/static/js/topology_page.js"></script>
+  <script src="/static/js/topology_device.js"></script>
   <script src="/static/js/topology_ports.js"></script>
 </body>
 </html>
