feat: Unify navigation bar icons and add version/contact info, fix analytics page icon

--- a/templates/graph.html
+++ b/templates/graph.html
@@ -59,7 +59,8 @@
     <!-- 页面导航栏 -->
     <nav class="navbar navbar-expand-lg navbar-clean">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">安吉电信动力设备管理系统</a>
+            <a class="navbar-brand" href="/"><i class="fas fa-project-diagram"></i> 安吉电信动力设备管理系统
+            <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Version 251019 | Email: 7843077@qq.com | WeChat: 7843077</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
