--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>统计分析 - 安吉电信动力设备管理系统</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="/static/css/nav.css" rel="stylesheet">
     <script src="/static/js/chart.min.js"></script>
     <style>
@@ -70,7 +70,8 @@
         <nav class="navbar navbar-expand-lg navbar-clean mb-4">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <i class="fas fa-bolt"></i> 安吉电信动力设备管理系统
+                    <i class="fas fa-project-diagram"></i> 安吉电信动力设备管理系统
+                    <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Version 251019 | Email: 7843077@qq.com | WeChat: 7843077</span>
                 </a>
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" href="/">设备管理</a>
