--- a/templates/lifecycle_management.html
+++ b/templates/lifecycle_management.html
@@ -65,7 +65,8 @@
     <nav class="navbar navbar-expand-lg navbar-clean">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-            <i class="fas fa-bolt"></i> 安吉电信动力设备管理系统
+            <i class="fas fa-project-diagram"></i> 安吉电信动力设备管理系统
+            <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Version 251019 | Email: 7843077@qq.com | WeChat: 7843077</span>
             </a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="/">设备管理</a>
