--- a/templates/lifecycle_management.html
+++ b/templates/lifecycle_management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>设备生命周期管理 - 安吉电信动力设备管理系统</title>
+    <title>设备生命周期管理 - 动力设备管理系统</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="/static/css/nav.css" rel="stylesheet">
@@ -65,8 +65,8 @@
     <nav class="navbar navbar-expand-lg navbar-clean">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-            <i class="fas fa-project-diagram"></i> 安吉电信动力设备管理系统
-            <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Version 251019 | Email: 7843077@qq.com | WeChat: 7843077</span>
+            <i class="fas fa-project-diagram"></i> 动力设备管理系统
+            <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Ver 1.0 | Email: 7843077@qq.com | WeChat: 7843077</span>
             </a>
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="/">设备管理</a>
