--- a/templates/topology.html
+++ b/templates/topology.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>拓扑图 - 安吉电信动力设备管理系统</title>
+  <title>拓扑图 - 动力设备管理系统</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -13,8 +13,8 @@
   <nav class="navbar navbar-expand-lg navbar-clean">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
-        <i class="fas fa-project-diagram"></i> 安吉电信动力设备管理系统
-        <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Version 251019 | Email: 7843077@qq.com | WeChat: 7843077</span>
+        <i class="fas fa-project-diagram"></i> 动力设备管理系统
+        <span style="font-size: 0.8rem; color: #6c757d; margin-left: 10px;">Ver 1.0 | Email: 7843077@qq.com | WeChat: 7843077</span>
       </a>
       <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/">设备管理</a>
